@@ -1,5 +1,8 @@
 2009-08-17  Ian Piumarta  <piumarta@freebsd.piumarta.com>
 
+	* plugins/PseudoTTYPlugin/build.cmake: Add
+	unix/plugins/AsynchFilePlugin to include search path.
+
 	* plugins/PseudoTTYPlugin/config.cmake: Check manually for
 	/usr/include/libutil.h because FreeBSD cannot #include it alone.
 
